; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_xhci.c_pci_xhci_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_xhci.c_pci_xhci_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_xhci_softc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i64, i64 }

@XHCI_MAX_SLOTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pci_xhci_softc*)* @pci_xhci_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pci_xhci_reset(%struct.pci_xhci_softc* %0) #0 {
  %2 = alloca %struct.pci_xhci_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.pci_xhci_softc* %0, %struct.pci_xhci_softc** %2, align 8
  %4 = load %struct.pci_xhci_softc*, %struct.pci_xhci_softc** %2, align 8
  %5 = getelementptr inbounds %struct.pci_xhci_softc, %struct.pci_xhci_softc* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 2
  store i64 0, i64* %6, align 8
  %7 = load %struct.pci_xhci_softc*, %struct.pci_xhci_softc** %2, align 8
  %8 = getelementptr inbounds %struct.pci_xhci_softc, %struct.pci_xhci_softc* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  store i64 0, i64* %9, align 8
  %10 = load %struct.pci_xhci_softc*, %struct.pci_xhci_softc** %2, align 8
  %11 = getelementptr inbounds %struct.pci_xhci_softc, %struct.pci_xhci_softc* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32 1, i32* %12, align 8
  store i32 1, i32* %3, align 4
  br label %13

13:                                               ; preds = %21, %1
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @XHCI_MAX_SLOTS, align 4
  %16 = icmp sle i32 %14, %15
  br i1 %16, label %17, label %24

17:                                               ; preds = %13
  %18 = load %struct.pci_xhci_softc*, %struct.pci_xhci_softc** %2, align 8
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @pci_xhci_reset_slot(%struct.pci_xhci_softc* %18, i32 %19)
  br label %21

21:                                               ; preds = %17
  %22 = load i32, i32* %3, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %3, align 4
  br label %13

24:                                               ; preds = %13
  ret void
}

declare dso_local i32 @pci_xhci_reset_slot(%struct.pci_xhci_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
